--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,24 @@
-# Financial Data and Analysis
-yfinance>=0.2.18
-pandas>=2.0.0
-numpy>=1.24.0
+# Core data science libraries
+numpy>=1.21.0
+pandas>=1.3.0
+scipy>=1.7.0
 
-# Data Visualization
-matplotlib>=3.7.0
-seaborn>=0.12.0
-plotly>=5.15.0
+# Financial data and analysis
+yfinance>=0.2.0
+statsmodels>=0.13.0
 
-# Statistical Analysis and Time Series
-scipy>=1.10.0
-statsmodels>=0.14.0
-pmdarima>=2.0.0
+# Machine learning
+scikit-learn>=1.0.0
 
-# Machine Learning (Updated for Python 3.13 compatibility)
-scikit-learn>=1.3.0
-# tensorflow>=2.13.0  # Commented out - not compatible with Python 3.13
-# keras>=2.13.0       # Commented out - not compatible with Python 3.13
+# Visualization
+matplotlib>=3.5.0
+seaborn>=0.11.0
+plotly>=5.0.0
 
-# Portfolio Optimization
-PyPortfolioOpt>=1.5.0
-
-# Additional Utilities
+# Jupyter and development
 jupyter>=1.0.0
-ipykernel>=6.25.0
-tqdm>=4.65.0
+ipykernel>=6.0.0
+tqdm>=4.60.0
+
+# Additional utilities
+requests>=2.25.0
