--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,10 @@ statsmodels>=0.13.0
 # Machine learning
 scikit-learn>=1.0.0
 
+# Deep learning for LSTM models
+tensorflow>=2.10.0
+keras>=2.10.0
+
 # Visualization
 matplotlib>=3.5.0
 seaborn>=0.11.0
@@ -18,7 +22,7 @@ plotly>=5.0.0
 # Jupyter and development
 jupyter>=1.0.0
 ipykernel>=6.0.0
-tqdm>=4.60.0
 
 # Additional utilities
+tqdm>=4.64.0
 requests>=2.25.0
